--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
         <li><%= link_to "Help",   help_path %></li>
         <!-- logged_in? is defined in the Sessions Helper which was provided in the Application Controller -->
         <% if logged_in? %>
-          <li><%= link_to "Users", '#'%></li>
+          <li><%= link_to "Users", users_path %></li>
           <li class="dropwdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
