up to sample microposts

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <!-- Maps the :title key to the @user.name value -->
 <% provide(:title, @user.name)%>
-<h1>
+<div class="row">
   <aside class="col-md-4">
     <section class="user_info">
       <h1>
@@ -10,4 +10,13 @@
       </h1>
     </section>
   </aside>
-</h1>
+  <div class="col-md-8">
+    <% if @user.microposts.any? %>
+      <h3>Microposts (<%= @user.microposts.count %>)</h3>
+      <ol class="microposts">
+        <%= render @microposts %>
+      </ol>
+      <%= will_paginate @microposts %>
+    <% end %>
+  </div>
+</div>
