--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,6 @@
-<div class="center jumotron">
-  <h1>Welcome to the Sample App</h1>
-
-  <h2>This is the home page for the
-    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application
-  </h2>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
-
-</div>
-
-<%= link_to image_tag("rails.png", alt: "Rails logo"), 'http://rubyonrails.org/'%>
-<!-- <%= link_to image_tag("kitten.jpg", alt: "Kitten pic")%> -->
+<% if logged_in? %>
+  <!-- finds the partial in the local directory -->
+  <%= render 'shared/new_micropost'%>
+<% else %>
+  <%= render 'shared/welcome_page'%>
+<%end%>
