--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(@user, url: yield(:url)) do |f|%>
 <!-- TODO fix this url to make sure that it -->
-  <%= render 'shared/error_messages'%>
+  <%= render 'shared/error_messages', object: f.object%>
 
   <%= f.label :name %>
   <%= f.text_field :name, class: 'form-control' %>
